V 0.2.0 + fixed header styling + fixed a bug where when uploading an image and clicking 'finish' too fast resulted in the image not being added to the event. + added please wait text as the image is being uploaded to imgur + added an error message when image upload fails + added 'Upcoming Events' and 'New Events' buttons to the CityHome page that change styling when clicked. Logic to affect the event order still needs to be implemented and styling needs to be determined. + Fixed dates to be readable instead of computer language.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -46,6 +46,17 @@ body {
   display: inline-block;
   margin: 0;
 }
+.body-header h3 {
+  display: inline-block;
+  margin: 0 0 0 20px;
+}
+.body-header .selected {
+  text-decoration: underline;
+  color: #333333;
+}
+.body-header .unselected {
+  cursor: pointer;
+}
 .select-city {
   height: 30px;
   padding: 5px;
